# VapourSynth-BilateralGPU

./: .gitignore  hatch_build.py  pyproject.toml
.github/workflows/: linux.yml  publish.yml  wheel.yml  windows.yml
