[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-bilateralgpu"
dynamic = ["version"]
description = "Bilateral filter for VapourSynth"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "WolframRhodium" }]
maintainers = [
    { name = "WolframRhodium" },
    { name = "Vardë", email = "ichunjo.le.terrible@gmail.com" },
]
dependencies = ["vapoursynth>=74"]

[dependency-groups]
dev = ["hatchling>=1.27.0", "packaging"]

[project.urls]
"Source Code" = "https://github.com/WolframRhodium/VapourSynth-BilateralGPU"
"Bug Tracker" = "https://github.com/WolframRhodium/VapourSynth-BilateralGPU/issues"

[tool.hatch.version]
source = "vcs"
tag-pattern = '^r(?P<version>.*)$'

[tool.hatch.build.targets.sdist]
include = ["rtc_source", "source", "sycl_source", "config.h.in", "CMakeLists.txt"]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins"]
artifacts = [
    "vapoursynth/plugins/**/*.so",
    "vapoursynth/plugins/**/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
